fix cutoff issue

--- a/twitter-wrapped/src/App.css
+++ b/twitter-wrapped/src/App.css
@@ -3,5 +3,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center; 
-  height: 100vh;
+  margin: 25px;
+  padding: 25px;
 }
